--- a/src/app/feature/inscription/inscription-form/inscription.component.html
+++ b/src/app/feature/inscription/inscription-form/inscription.component.html
@@ -48,7 +48,7 @@
       </div>
       <div class="card-actions">
         <button class="btn btn-primary btn-sm" (click)="save()">Guardar</button>
-        <button class="btn btn-sm">Cancelar</button>
+        <button class="btn btn-sm" (click)="cancelar()" >Cancelar</button>
       </div>
     </div>
   </div>
