--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -32,7 +32,7 @@
     <h2 class="card-title">Lista de usuarios</h2>
     <p>Quieres ver la lista de usuarios actualmente? Da click aqui</p>
     <div class="card-actions justify-end">
-      <button class="btn rounded-md transition ease-in-out  bg-blue-600 hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300 ..."routerLink="/layout/user-list">Lista Usuarios</button>
+      <button class="btn rounded-md transition ease-in-out  bg-blue-600 hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300 ..." routerLink="/layout/requests-list">Lista Usuarios</button>
     </div>
   </div>
   <div class="card-body shadow-lg bg-white rounded">
