--- a/src/app/course-page/course-page.component.html
+++ b/src/app/course-page/course-page.component.html
@@ -1,106 +1,122 @@
-<h1>{{ course.title }}</h1>
-<div class="information-container">
-  <div class="course-information">
-    <mat-tab-group>
-      <mat-tab label="General">
-        <mat-accordion>
-          <mat-expansion-panel
-            (opened)="panelOpenState = true"
-            (closed)="panelOpenState = false"
-          >
-            <mat-expansion-panel-header>
-              <mat-panel-title> Instructor/es </mat-panel-title>
-              <mat-panel-description>
-                Profesionales encargados de impartir el curso
-              </mat-panel-description>
-            </mat-expansion-panel-header>
-            <mat-list>
-              <mat-list-item *ngFor="let responsable of course.responsables">
-                <mat-icon matListItemIcon>account_circle</mat-icon>
-                <div matListItemTitle>{{ responsable }}</div>
-              </mat-list-item>
-            </mat-list>
-          </mat-expansion-panel>
-          <mat-expansion-panel
-            (opened)="panelOpenState = true"
-            (closed)="panelOpenState = false"
-          >
-            <mat-expansion-panel-header>
-              <mat-panel-title> Horarios </mat-panel-title>
-              <mat-panel-description>
-                Horarios disponibles para el curso
-              </mat-panel-description>
-            </mat-expansion-panel-header>
-            <mat-list>
-              <mat-list-item *ngFor="let schedule of course.schedule">
-                <mat-icon matListItemIcon>calendar_today</mat-icon>
-                <div matListItemTitle>{{ schedule }}</div>
-              </mat-list-item>
-            </mat-list>
-          </mat-expansion-panel>
-          <mat-expansion-panel
-            (opened)="panelOpenState = true"
-            (closed)="panelOpenState = false"
-          >
-            <mat-expansion-panel-header>
-              <mat-panel-title> Requisitos </mat-panel-title>
-              <mat-panel-description>
-                Requisitos necesarios para la inscripcion
-              </mat-panel-description>
-            </mat-expansion-panel-header>
-            <mat-list>
-              <mat-list-item *ngFor="let requirement of course.requirements">
-                <mat-icon matListItemIcon>file_copy</mat-icon>
-                <div matListItemTitle>{{ requirement }}</div>
-              </mat-list-item>
-            </mat-list>
-          </mat-expansion-panel>
-        </mat-accordion>
-      </mat-tab>
-      <mat-tab label="Contenido">
-        <mat-list>
-          <div mat-subheader>Contenido a impartir en el curso</div>
-          <mat-list-item *ngFor="let content of course.content">
-            <mat-icon matListItemIcon>bookmark</mat-icon>
-            <div matListItemTitle>{{ content }}</div>
-          </mat-list-item>
-        </mat-list>
-      </mat-tab>
+<app-nav-bar>
+  <div class="header">
+    <button
+      mat-raised-button
+      color="accent"
+      class="my-3 mx-3"
+      routerLink="/courses"
+    >
+      Atras
+    </button>
+    <h1>{{ course.title }}</h1>
+  </div>
 
-      <mat-tab label="Pre-requisitos">
-        <mat-list>
-          <div mat-subheader>Pre requisitos para tomar el curso</div>
-          <mat-list-item *ngFor="let preRequirement of course.preRequirements">
-            <mat-icon matListItemIcon>account_balance_wallet</mat-icon>
-            <div matListItemTitle>{{ preRequirement }}</div>
-          </mat-list-item>
-        </mat-list>
-      </mat-tab>
-    </mat-tab-group>
+  <div class="information-container">
+    <div class="course-information">
+      <mat-tab-group>
+        <mat-tab label="General">
+          <mat-accordion>
+            <mat-expansion-panel
+              (opened)="panelOpenState = true"
+              (closed)="panelOpenState = false"
+            >
+              <mat-expansion-panel-header>
+                <mat-panel-title> Instructor/es </mat-panel-title>
+                <mat-panel-description>
+                  Profesionales encargados de impartir el curso
+                </mat-panel-description>
+              </mat-expansion-panel-header>
+              <mat-list>
+                <mat-list-item *ngFor="let responsable of course.responsables">
+                  <mat-icon matListItemIcon>account_circle</mat-icon>
+                  <div matListItemTitle>{{ responsable }}</div>
+                </mat-list-item>
+              </mat-list>
+            </mat-expansion-panel>
+            <mat-expansion-panel
+              (opened)="panelOpenState = true"
+              (closed)="panelOpenState = false"
+            >
+              <mat-expansion-panel-header>
+                <mat-panel-title> Horarios </mat-panel-title>
+                <mat-panel-description>
+                  Horarios disponibles para el curso
+                </mat-panel-description>
+              </mat-expansion-panel-header>
+              <mat-list>
+                <mat-list-item *ngFor="let schedule of course.schedule">
+                  <mat-icon matListItemIcon>calendar_today</mat-icon>
+                  <div matListItemTitle>{{ schedule }}</div>
+                </mat-list-item>
+              </mat-list>
+            </mat-expansion-panel>
+            <mat-expansion-panel
+              (opened)="panelOpenState = true"
+              (closed)="panelOpenState = false"
+            >
+              <mat-expansion-panel-header>
+                <mat-panel-title> Requisitos </mat-panel-title>
+                <mat-panel-description>
+                  Requisitos necesarios para la inscripcion
+                </mat-panel-description>
+              </mat-expansion-panel-header>
+              <mat-list>
+                <mat-list-item *ngFor="let requirement of course.requirements">
+                  <mat-icon matListItemIcon>file_copy</mat-icon>
+                  <div matListItemTitle>{{ requirement }}</div>
+                </mat-list-item>
+              </mat-list>
+            </mat-expansion-panel>
+          </mat-accordion>
+        </mat-tab>
+        <mat-tab label="Contenido">
+          <mat-list>
+            <div mat-subheader>Contenido a impartir en el curso</div>
+            <mat-list-item *ngFor="let content of course.content">
+              <mat-icon matListItemIcon>bookmark</mat-icon>
+              <div matListItemTitle>{{ content }}</div>
+            </mat-list-item>
+          </mat-list>
+        </mat-tab>
+
+        <mat-tab label="Pre-requisitos">
+          <mat-list>
+            <div mat-subheader>Pre requisitos para tomar el curso</div>
+            <mat-list-item
+              *ngFor="let preRequirement of course.preRequirements"
+            >
+              <mat-icon matListItemIcon>account_balance_wallet</mat-icon>
+              <div matListItemTitle>{{ preRequirement }}</div>
+            </mat-list-item>
+          </mat-list>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+    <div class="course-card">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Shiba Inu</mat-card-title>
+          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        </mat-card-header>
+        <img
+          mat-card-image
+          src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+          alt="Photo of a Shiba Inu"
+        />
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and distinct spitz
+            breeds of dog from Japan. A small, agile dog that copes very well
+            with mountainous terrain, the Shiba Inu was originally bred for
+            hunting.
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button routerLink="/login">INSCRIBIRSE</button>
+          <button mat-button>SHARE</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
   </div>
-  <div class="course-card">
-    <mat-card class="example-card">
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-      </mat-card-header>
-      <img
-        mat-card-image
-        src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-        alt="Photo of a Shiba Inu"
-      />
-      <mat-card-content>
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button routerLink="/login">INSCRIBIRSE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
-</div>
+</app-nav-bar>
