--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -9,9 +9,7 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="courses">Cursos</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="/courses">Cursos</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -27,6 +25,7 @@
       </button>
       <span>visualizacion-cursos</span>
     </mat-toolbar>
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
+    <ng-content></ng-content>
   </mat-sidenav-content>
 </mat-sidenav-container>
