--- a/src/app/feature/inscription/inscription-list/inscription-list.component.html
+++ b/src/app/feature/inscription/inscription-list/inscription-list.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<!-- <div class="">
   <app-inscription-toolbar (termEmitter)="findByName($event)"></app-inscription-toolbar>
   <div class="overflow-x-auto bg-white">
     <table class="table table-compact w-full">
@@ -51,4 +51,4 @@
       </tbody>
     </table>
   </div>
-</div>
+</div> -->
