--- a/src/app/feature/inscription/inscription-search/inscription-search.component.html
+++ b/src/app/feature/inscription/inscription-search/inscription-search.component.html
@@ -10,7 +10,7 @@
   />
   <ul class="menu menu-compact dropdown-content bg-white">
     <li *ngFor="let inscription of inscriptions">
-      <a (click)="onSelect(inscription)">{{ inscription.name + inscription.lastname }}</a>
+      <!-- <a (click)="onSelect(inscription)">{{ inscription.name + inscription.lastname }}</a> -->
     </li>
   </ul>
 </div>
