--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -9,7 +9,7 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="courses">Cursos</a>
+      <a mat-list-item [routerLink]="['/carreers']">Cursos</a>
       <a mat-list-item href="#">Link 2</a>
       <a mat-list-item href="#">Link 3</a>
     </mat-nav-list>
@@ -25,7 +25,7 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>visualizacion-cursos</span>
+      <span>Cursos</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
