--- a/src/app/course-list/course-list.component.html
+++ b/src/app/course-list/course-list.component.html
@@ -1,20 +1,42 @@
+<ng-template #sinCursos>
+  <h1>No hay cursos para mostrar</h1>
+</ng-template>
+<h1 class="title-center">{{cursos[0].nombre}}</h1>
+
+<!-- <h2>{{cursos | json}}</h2> -->
+
 <div class="courses-container">
-  <div class="card" *ngFor="let course of courses">
-    <mat-card>
+
+  <!-- <h2>{{courses2$ | async | json}}</h2> -->
+  <mat-form-field class="example-form-field">
+    <mat-label>Busqueda</mat-label>
+    <input matInput type="text" [(ngModel)]="value">
+    <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-form-field>
+  <mat-checkbox class="example-margin" [(ngModel)]="checked_gratis">Gratis</mat-checkbox>
+  <mat-checkbox class="example-margin" [(ngModel)]="checked_pago">Pagados</mat-checkbox>
+  <div *ngIf="cursos.length; else sinCursos" class="card-container">
+  <div *ngFor="let course of cursos" class="courses-container">
+    <mat-card  *ngFor="let course of course.cursos | courseList : value | corseListCheckbox : checked_gratis | courseListCheckboxNonfree : checked_pago" class="card">
       <img
         mat-card-image
         src="https://material.angular.io/assets/img/examples/shiba2.jpg"
         alt="Photo of a Shiba Inu"
       />
       <mat-card-content>
-        <h3>{{ course.title }}</h3>
-        <p>{{ course.description }}</p>
+        <h2>{{ course.nombre }}</h2>
+        <p>{{ course.descripcion }}</p>
+        <p>{{ course.gratis ? 'Gratis' : 'Pagado' }}</p>
+        <p>{{ course.estado }}</p>
       </mat-card-content>
       <mat-card-actions>
-        <a [routerLink]="['/courses', course.id]" [state]="course">
-          <button mat-raised-button color="primary">Ver</button>
-        </a>
+          <button [routerLink]="['/courses/name', course.nombre]" mat-raised-button color="primary"> <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="event_available"></mat-icon> Matriculate</button>
       </mat-card-actions>
     </mat-card>
   </div>
 </div>
+
+</div>
+
