--- a/src/app/login/login/login-form/login.component.html
+++ b/src/app/login/login/login-form/login.component.html
@@ -23,7 +23,8 @@
           type="password"
           name=""
           id=""
-          placeholder="Contraseña"
+          placeholder=""
+          [(ngModel)]="initialForm.password"
         />
 
       </div>
