--- a/src/app/feature/inscription/inscription-form/inscription.component.html
+++ b/src/app/feature/inscription/inscription-form/inscription.component.html
@@ -10,12 +10,7 @@
       <div class="grid">
         <label for="" style="margin-bottom: 8px;">¿Como se entero del curso? </label>
 
-        <select name="select" class="input input-primary" aria-placeholder="Seleccione una opcion" style="margin-bottom: 12px;" required="true">
-          <option value="value1" disabled selected >Seleccione una opcion</option>
-          <option value="value1" >Propaganda por TV</option>
-          <option value="value2" >Me lo conto un amigo</option>
-          <option value="value3">Me lo conto un profesor</option>
-        </select>
+        <app-combobox-publicity (idEmitter)="initialForm.publicity=$event" [id]="initialForm.publicity"></app-combobox-publicity>
         <label for="" style="margin-bottom: 8px;">¿Que otro curso le gustaria seguir? </label>
         <select name="select" class="input input-primary" aria-placeholder="Seleccione una opcion" style="margin-bottom: 12px;" required="false">
           <option value="" selected >Seleccione una opcion</option>
@@ -44,6 +39,15 @@
           id="contacto"
           placeholder="Ejemplo: Hugo Perez"
           [(ngModel)]="initialForm.institutionContact"
+        />
+
+        <label style="margin-bottom: 8px; margin-top: 12px;">Nombre del contacto en la institucion: </label>
+        <input
+          class="input input-primary"
+          type="file"
+          name=""
+          id="contacto"
+          placeholder="Ejemplo: Hugo Perez"
         />
 
       </div>
