--- a/src/app/feature/requests/requests-search/requests-search.component.html
+++ b/src/app/feature/requests/requests-search/requests-search.component.html
@@ -10,7 +10,7 @@
   />
   <ul class="menu menu-compact dropdown-content bg-white">
     <li *ngFor="let request of requests">
-      <a (click)="onSelect(request)">{{ request.names + request.lastnames }}</a>
+      <a (click)="onSelect(request)">{{ request.nombres + request.apellidos }}</a>
     </li>
   </ul>
 </div>
