--- a/src/app/feature/requests/requests-list/requests-list.component.html
+++ b/src/app/feature/requests/requests-list/requests-list.component.html
@@ -19,7 +19,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let request of requestsList">
+        <tr *ngFor="let request of requestsList" >
           <td>
             <a [routerLink]="['../request-form', request.id]">
               <svg
@@ -45,10 +45,12 @@
           <td>{{ request.apellidos }}</td>
           <td>{{ request.institucion }}</td>
           <td>
-            <input class="toggle toggle-primary" type="checkbox" name="" id="" [ngModel]="request.aceptado" >
-              <!-- <mat-checkbox [(ngModel)]="request.aceptado"
-                            (ngModelChange)="updateAllComplete()">
-              </mat-checkbox> -->
+              <mat-checkbox [(ngModel)]="request.aceptado"
+                            (ngModelChange)="updateAllComplete()"
+                            (change)="change(request)"
+                            >
+                            
+              </mat-checkbox>
           </td>
         </tr>
       </tbody>
