--- a/src/app/feature/requests/requests-list/requests-list.component.html
+++ b/src/app/feature/requests/requests-list/requests-list.component.html
@@ -1,7 +1,71 @@
 <div class="">
   <app-requests-toolbar (termEmitter)="findByName($event)"></app-requests-toolbar>
   <div class="overflow-x-auto bg-white">
-    <table class="table table-compact w-full">
+
+    <table mat-table [dataSource]="dataSource" matSort 
+     matSortAction="id"
+    matSortDirection="desc"
+       class="mat-elevation-z8">
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      Id
+    </th>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="nombres">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by nombres">
+      Nombres
+    </th>
+    <td mat-cell *matCellDef="let element"> {{element.nombres}} </td>
+  </ng-container>
+
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="apellidos">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by symbol">
+      Apellidos
+    </th>
+    <td mat-cell *matCellDef="let element"> {{element.apellidos}} </td>
+  </ng-container>
+
+
+   <!-- Weight Column -->
+   <ng-container matColumnDef="institucion">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by weight">
+      Institucion
+    </th>
+    <td mat-cell *matCellDef="let element"> {{element.institucion}} </td>
+  </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="activo">
+      <th   mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by symbol">
+        <mat-checkbox class="example-margin"
+                  [checked]="allComplete"
+                  [indeterminate]="someComplete()"
+                  (change)="setAll($event.checked)">
+            </mat-checkbox>
+        Activo
+      </th>
+      <td mat-cell *matCellDef="let element" >
+        <mat-checkbox [(ngModel)]="element.aceptado"
+                      (change)="change(element)"
+                      (ngModelChange)="updateAllComplete(element)"
+                      >
+
+                      
+        </mat-checkbox>
+    </td>
+      <!-- <td mat-cell *matCellDef="let element"> {{element.aceptado}} </td> -->
+    </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+    <!-- <table class="table table-compact w-full">
       <thead>
         <tr>
           <th></th>
@@ -54,7 +118,7 @@
           </td>
         </tr>
       </tbody>
-    </table>
+    </table> -->
     <button mat-stroked-button (click)="save()" >Guardar</button>
   </div>
 </div>
