--- a/src/app/login/login/login-form/login.component.html
+++ b/src/app/login/login/login-form/login.component.html
@@ -14,7 +14,7 @@
           name=""
           id=""
           placeholder="Cedula de identidad"
-          [(ngModel)]="user"
+          [(ngModel)]="initialForm.username"
         />
 
         <label for="" style="margin-bottom: 8px;">Contraseña:</label>
