--- a/src/app/course-list/course-list.component.html
+++ b/src/app/course-list/course-list.component.html
@@ -32,7 +32,7 @@
         <p>{{ course.estado }}</p>
       </mat-card-content>
       <mat-card-actions>
-          <button [routerLink]="['/courses/name', course.nombre]" mat-raised-button color="primary"> <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="event_available"></mat-icon> Matriculate</button>
+          <button [routerLink]="['/courses/name', course.nombre]" mat-raised-button color="primary"> <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="event_available"></mat-icon>Ver más</button>
       </mat-card-actions>
     </mat-card>
   </div>
