--- a/src/app/feature/combobox-publicity/combobox-publicity.component.html
+++ b/src/app/feature/combobox-publicity/combobox-publicity.component.html
@@ -1,5 +1,5 @@
 <select #selectPublicity (change)="onSelect(selectPublicity.value)" class="select select-primary" name="" id ="">
-  <option value="0" selected disable>Seleccione</option>
+  <option value="0" selected disable>Seleccione una opcion</option>
   <option *ngFor="let publicity of publicities"
   [value]="publicity.id"
   [selected]="publicity.id === id"
