--- a/src/app/feature/requests/requests-search/requests-search.component.html
+++ b/src/app/feature/requests/requests-search/requests-search.component.html
@@ -1,4 +1,4 @@
-<div class="dropdown dropdown-hover">
+<!-- <div class="dropdown dropdown-hover">
   <input
     #inputSearchAuthority
     class="input input-primary input-sm"
@@ -13,4 +13,4 @@
       <a (click)="onSelect(request)">{{ request.nombres + request.apellidos }}</a>
     </li>
   </ul>
-</div>
+</div> -->
