--- a/src/app/login/login/login-form/login.component.html
+++ b/src/app/login/login/login-form/login.component.html
@@ -33,7 +33,10 @@
         <button class="btn btn-sm">Cancelar</button>
       </div>
       <div class="recuperar">
-        <a class="obo" (click)="restart()">Recuperar Contraseña</a>
+        <a class="obo">Recuperar Contraseña</a>
+      </div>
+      <div class="recuperar">
+        <a class="obo" (click)="restart()">Generar usuario</a>
       </div>
     </div>
   </div>
