--- a/src/app/login/restart/restart.component.html
+++ b/src/app/login/restart/restart.component.html
@@ -3,7 +3,7 @@
   <div class="card shadow-2xl shadow-black">
     <div class="card-body">
       <div class="card-title">
-        Recuperar <span class="text-primary">Contraseña</span>
+        Generar usuario<span class="text-primary"> CECY</span>
       </div>
       <div class="divider"></div>
       <div class="grid justify-center">
@@ -15,12 +15,12 @@
           name=""
           id=""
           placeholder="Cedula de identidad"
-          [(ngModel)]="cedula"
+          [(ngModel)]="captureCedula"
         />
 
       </div>
       <div class="card-actions" style="margin-top: 10px;">
-        <button class="btn btn-primary btn-sm" (click)="send()">Comprobar</button>
+        <button class="btn btn-primary btn-sm" (click)="send(captureCedula)">Comprobar</button>
         <button class="btn btn-sm">Cancelar</button>
       </div>
     </div>
