agrega validacion de matriculado o notificado segun observaciones

--- a/src/app/student-form/student-form.component.html
+++ b/src/app/student-form/student-form.component.html
@@ -225,7 +225,7 @@
           </button>
         </div>
         <div class="col">
-          <button mat-raised-button color="primary">Validar</button>
+          <button (click)="updateFormState()" mat-raised-button color="primary">Validar</button>
         </div>
         <div class="col">
           <button mat-raised-button color="warn">Cancelar</button>
