--- a/src/app/feature/inscription/inscription-list/inscription-list.component.html
+++ b/src/app/feature/inscription/inscription-list/inscription-list.component.html
@@ -1,3 +1,4 @@
+<p>Pagina en proceso</p>
 <!-- <div class="">
   <app-inscription-toolbar (termEmitter)="findByName($event)"></app-inscription-toolbar>
   <div class="overflow-x-auto bg-white">
